// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PartialDateForm snapshots tests renders PartialDateForm component 1`] = `
<PartialDateForm
  allowPartial={true}
  className=""
  classes={
    Object {
      "fakeTitle": "PartialDateForm-fakeTitle-1",
      "hideLabel": "PartialDateForm-hideLabel-2",
    }
  }
  dateFormat="YYYY-MM-DD"
  disableFuture={false}
  floatingTitle="Enter a date"
  floatingTitleRequired={false}
  locale={
    Object {
      "dayLabel": "Day",
      "maxNumberCharCode": 57,
      "minNumberCharCode": 48,
      "monthLabel": "Month",
      "validationMessage": Object {
        "day": "Invalid day",
        "future": "Date must be before now",
        "month": "Invalid month",
        "year": "Invalid year",
      },
      "yearLabel": "Year",
    }
  }
  months={
    Array [
      "January",
      "February",
      "March",
      "April",
      "May",
      "June",
      "July",
      "August",
      "September",
      "October",
      "November",
      "December",
    ]
  }
  name="partialDate"
  onChange={[Function]}
/>
`;

exports[`PartialDateForm snapshots tests renders PartialDateForm component 2 1`] = `
<PartialDateForm
  allowPartial={true}
  className="requiredField"
  classes={
    Object {
      "fakeTitle": "PartialDateForm-fakeTitle-1",
      "hideLabel": "PartialDateForm-hideLabel-2",
    }
  }
  dateFormat="YYYY-MM-DD"
  disableFuture={false}
  floatingTitle="Enter a date"
  floatingTitleRequired={false}
  locale={
    Object {
      "dayLabel": "Day",
      "maxNumberCharCode": 57,
      "minNumberCharCode": 48,
      "monthLabel": "Month",
      "validationMessage": Object {
        "day": "Invalid day",
        "future": "Date must be before now",
        "month": "Invalid month",
        "year": "Invalid year",
      },
      "yearLabel": "Year",
    }
  }
  months={
    Array [
      "January",
      "February",
      "March",
      "April",
      "May",
      "June",
      "July",
      "August",
      "September",
      "October",
      "November",
      "December",
    ]
  }
  name="partialDate"
  onChange={[Function]}
/>
`;

exports[`PartialDateForm snapshots tests renders PartialDateForm component 3 1`] = `
<PartialDateForm
  allowPartial={false}
  className="requiredField"
  classes={
    Object {
      "fakeTitle": "PartialDateForm-fakeTitle-1",
      "hideLabel": "PartialDateForm-hideLabel-2",
    }
  }
  dateFormat="YYYY-MM-DD"
  disableFuture={false}
  floatingTitle="Enter a date"
  floatingTitleRequired={false}
  locale={
    Object {
      "dayLabel": "Day",
      "maxNumberCharCode": 57,
      "minNumberCharCode": 48,
      "monthLabel": "Month",
      "validationMessage": Object {
        "day": "Invalid day",
        "future": "Date must be before now",
        "month": "Invalid month",
        "year": "Invalid year",
      },
      "yearLabel": "Year",
    }
  }
  months={
    Array [
      "January",
      "February",
      "March",
      "April",
      "May",
      "June",
      "July",
      "August",
      "September",
      "October",
      "November",
      "December",
    ]
  }
  name="partialDate"
  onChange={[Function]}
/>
`;
